Added filter functionality

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
 
 <script>
-    $("#element").clearableInput();
+    $("#element").clearableInput({
+        'type' : 'numeric' //alphanumeric
+    });
 </script>
 
 </body>
